[6.0] Fix some spacing issues while in windowed mode

--- a/fix-drag-and-address-bar-overlap.css
+++ b/fix-drag-and-address-bar-overlap.css
@@ -40,3 +40,11 @@
 .mainbar > .toolbar-mainbar:not(.dummy) {
 	z-index: 10;
 }
+
+.mainbar {
+	background: var(--colorAccentBg);
+}
+
+#browser:not(.maximized) .mainbar > .toolbar {
+	margin-top: 6px !important;
+}
